--- a/css/main.css
+++ b/css/main.css
@@ -121,12 +121,14 @@ body {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
+  background-color: goldenrod;
   height: 300px;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+  border-style: solid;
+  
 }
 
 
