--- a/css/main.css
+++ b/css/main.css
@@ -95,41 +95,83 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+/*Large background image*/
 html {
-  background-color: #fff;
+  background-color: black;
   height: 100%;
+  width: 100%;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
-  height: 100%;
-}
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 0em 2em;
+    font-size: 1.25em;
+    font: 100px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
 
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+  }
+
+.flex-container {
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
-  align-items: center;
+  max-width: 1200px;
 }
-
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: goldenrod;
-  height: 300px;
+p span {
+    font-family: 'Lora', sans-serif;
+}
+header,
+footer {
+    width: 100%;
   display: flex;
-  width: 30%;
+  justify-content: flex-start;
+}
+header h1{
+    font-family: 'Lora', sans-serif;
+  font-size: 3em;
+}
+main{
+ width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #fff;
+}
+main p{
+    font-size: 1.35em;
+}
+.flex-items{
+    display: flex;
   justify-content: center;
   align-items: center;
-  border-style: solid;
-  
+  line-height: 1.5em;
+  font-size: 1em;
+  border-bottom: 1px solid #555;
 }
+footer {
+    border-top: 1px solid #fff;
+  }
+  footer i {
+    padding: 30px 20px 0 0;
+  }
+
+  #div-1 p {
+    border-left: 1px solid #555;
+    border-right: 1px solid #555;
+    padding: 0 40px;
+  }
+  #div-2 p {
+    border-left: 1px solid #555;
+    border-right: 1px solid #555;
+    padding: 0 40px;
+  }
+  #div-3 p {
+    border-left: 1px solid #555;
+    border-right: 1px solid #555;
+    padding: 0 40px;
+  }
+
 
 
 
